--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,9 @@
 [build]
-  command = "npm run build"
+  functions = "netlify/functions"
   publish = "build"
+  command = "npm run build"
 
 [[redirects]]
-  from = "/*"
-  to = "/index.html"
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
   status = 200
